syntax = "proto3";

message Pokemon {
  int64 id=1;
  string name=2;
  PokemonTag tag=3;
}

message PokemonId {
  int64 id=1;
}

message PokemonTag {
  string value=1;
}

service PokemonService {
  rpc addPokemon(Pokemon) returns (PokemonId);
  rpc getPokemonByTag(PokemonTag) returns (stream Pokemon);
}
